@@ -2,14 +2,12 @@ package com.vocco.api.domain.curso_instituicao;
 
 import com.vocco.api.domain.curso.Curso;
 import com.vocco.api.domain.curso.CursoRepository;
-import com.vocco.api.domain.curso.dto.DadosDetalhamentoCurso;
 import com.vocco.api.domain.curso_instituicao.dto.DadosAtualizacaoInstituicaoCurso;
 import com.vocco.api.domain.curso_instituicao.dto.DadosCadastroCursoInstituicao;
 import com.vocco.api.domain.curso_instituicao.dto.DadosDetalhamentoCursoInstituicao;
 import com.vocco.api.domain.instituicao.Instituicao;
 import com.vocco.api.domain.instituicao.InstituicaoRepository;
 import com.vocco.api.domain.instituicao.dto.DadosDetalhamentoInstituicao;
-import com.vocco.api.domain.instituicao.dto.DadosListagemInstituicaoEMecCurso;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -45,20 +43,12 @@ public class CursoInstituicaoService {
         return repository.findAll().stream().map(DadosDetalhamentoCursoInstituicao::new).toList();
     }
 
-    public List<DadosListagemInstituicaoEMecCurso> buscarInstituicoesPorCursoComNotaMec(Long cursoId){
-        return repository.findAllByCursoId(cursoId)
-                .stream()
-                .filter(ci -> ci.getInstituicao().isAtivo())
-                .map(ci -> new DadosListagemInstituicaoEMecCurso(ci.getInstituicao(), ci.getNotaMec()))
-                .collect(Collectors.toList());
+    public List<DadosDetalhamentoCursoInstituicao> buscarInstituicoesPorCursoComNotaMec(Long cursoId){
+        return repository.findAllByCursoId(cursoId).stream().map(DadosDetalhamentoCursoInstituicao::new).toList();
     }
 
-    public List<DadosDetalhamentoCurso> buscarCursosPorInstituicao(Long instituicaoId){
-        return repository.findAllByInstituicaoId(instituicaoId)
-                .stream()
-                .filter(ci -> ci.getCurso().isAtivo())
-                .map(ci -> new DadosDetalhamentoCurso(ci.getCurso()))
-                .collect(Collectors.toList());
+    public List<DadosDetalhamentoCursoInstituicao> buscarCursosPorInstituicao(Long instituicaoId){
+        return repository.findAllByInstituicaoId(instituicaoId).stream().map(DadosDetalhamentoCursoInstituicao::new).toList();
     }
 
     public List<DadosDetalhamentoInstituicao> buscarInstituicoesPorCurso(Long cursoId){
